add admin-only protections to routes
